Noise Depth widgets steps set to 0 #69384

Closed
opened 2019-09-01 19:18:44 +02:00 by Lucas Boutrot · 5 comments

System Information
Operating system: Windows-10-10.0.18362 64 Bits
Graphics card: GeForce GTX 1060/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 436.15

Blender Version
Broken: version: 2.81 (sub 4), branch: master (modified), commit date: 2019-09-01 15:39, hash: 6ff675f830

Short description of error
In the properties of a Cloud texture or Magic texture, containing a noise depth property, this property does not change when using the arrows to change it.

noise_depth_bug.jpg

Exact steps for others to reproduce the error
noise_depth_bug.blend

  • Open the linked file
  • Click on one of the arrows on the property Depth of the Cloud texture
**System Information** Operating system: Windows-10-10.0.18362 64 Bits Graphics card: GeForce GTX 1060/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 436.15 **Blender Version** Broken: version: 2.81 (sub 4), branch: master (modified), commit date: 2019-09-01 15:39, hash: `6ff675f830` **Short description of error** In the properties of a Cloud texture or Magic texture, containing a noise depth property, this property does not change when using the arrows to change it. ![noise_depth_bug.jpg](https://archive.blender.org/developer/F7713149/noise_depth_bug.jpg) **Exact steps for others to reproduce the error** [noise_depth_bug.blend](https://archive.blender.org/developer/F7713152/noise_depth_bug.blend) - Open the linked file - Click on one of the arrows on the property Depth of the Cloud texture
Author

Added subscriber: @thornydre

Added subscriber: @thornydre
Lucas Boutrot self-assigned this 2019-09-01 19:19:03 +02:00
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Can confirm, fix also looks good, thx!

Can confirm, fix also looks good, thx!

This issue was referenced by 97f7f5fdbb

This issue was referenced by 97f7f5fdbbba7855431b86a5038402d83b9bdcd8
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#69384
No description provided.