Fix T69384: Noise Depth widgets steps set to 0

Reviewed By: brecht, lichtwerk

Maniphest Tasks: T69384

Differential Revision: https://developer.blender.org/D5652